--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -97,6 +97,6 @@ jobs:
             - name: Attest Build Provenance
               uses: actions/attest-build-provenance@v3
               with:
-                subject-name: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+                subject-name: oci://${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
                 subject-digest: ${{ steps.build.outputs.digest }}
       
