--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -15,7 +15,7 @@ jobs:
     build-publish:        
         runs-on: self-hosted
         env:
-          DOCKER_REPO: 'docker-local'
+          DOCKER_REPO: 'gadgetsnew-docker-local'
           IMAGE_NAME: 'github-jfrog-testing:${{ github.run_number }}'  
           
         outputs:
@@ -36,7 +36,7 @@ jobs:
        
             - name: configure jfrog environment
               run: |
-                jf pip-config --repo-resolve=python-virtual    
+                jf pip-config --repo-resolve=gadgetsnew-python-virtual    
                 
             - name: configure environment
               run: |                      
@@ -53,7 +53,7 @@ jobs:
 
             - name: publish python package
               run: |
-                jf rt u dist/ python-virtual/example-projects/ --module=jfrog-python-example 
+                jf rt u dist/ gadgetsnew-python-virtual/example-projects/ --module=jfrog-python-example 
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3    
