--- a/.github/workflows/test-ctoa.yml
+++ b/.github/workflows/test-ctoa.yml
@@ -19,7 +19,7 @@ jobs:
           IMAGE_NAME: 'github-jfrog-testing:${{ github.run_number }}'  
           
         outputs:
-          image: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+          image: ${{ vars.CTOA_JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
           digest: ${{ steps.build.outputs.digest }}
         steps:
             - name: Checkout the repository    
@@ -29,7 +29,7 @@ jobs:
               id: setup-cli
               uses: jfrog/setup-jfrog-cli@v4
               env: 
-                JF_URL: https://${{ vars.JF_URL }}/
+                CTOA_JF_URL: https://${{ vars.CTOA_CTOA_JF_URL }}/
                 JF_PROJECT: carmit
               with:
                   oidc-provider-name: github-carmit-project-1
@@ -61,7 +61,7 @@ jobs:
             - name: Authenticate Docker
               uses: docker/login-action@v3
               with:
-                registry: ${{ vars.JF_URL }}
+                registry: ${{ vars.CTOA_JF_URL }}
                 username: ${{ steps.setup-cli.outputs.oidc-user }} 
                 password: ${{ steps.setup-cli.outputs.oidc-token }}
                 
@@ -71,18 +71,18 @@ jobs:
               with:
                 push: true
                 platforms: linux/amd64, linux/arm64
-                tags: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}          
+                tags: ${{ vars.CTOA_JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}          
 
 
             - name: docker scan
               if: false
               run: |  
-                 jf docker pull ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-                 jf docker scan ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}                               
+                 jf docker pull ${{ vars.CTOA_JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+                 jf docker scan ${{ vars.CTOA_JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}                               
 
             - name: add docker package to build
               run: |  
-                 echo "${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}" > metadata.json
+                 echo "${{ vars.CTOA_JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}" > metadata.json
                  jf rt build-docker-create ${{ env.DOCKER_REPO }} --image-file metadata.json 
                  
             - name: publish build info
@@ -94,6 +94,6 @@ jobs:
             - name: Attest Build Provenance
               uses: actions/attest-build-provenance@v3
               with:
-                subject-name: oci://${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+                subject-name: oci://${{ vars.CTOA_JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
                 subject-digest: ${{ steps.build.outputs.digest }}
       
