--- a/.github/workflows/test-ctoa.yml
+++ b/.github/workflows/test-ctoa.yml
@@ -13,7 +13,7 @@ permissions:
   attestations: write  
 jobs:
     build-publish:        
-        runs-on: self-hosted
+        runs-on: ubuntu-latest
         env:
           DOCKER_REPO: 'carmit-docker-local'
           IMAGE_NAME: 'github-jfrog-testing:${{ github.run_number }}'  
