Update Docker repository references in workflow

--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -15,11 +15,11 @@ jobs:
     build-publish:        
         runs-on: self-hosted
         env:
-          DOCKER_REPO: 'gadgetsnew-docker-local'
+          PROJECT: 'coyote'
           IMAGE_NAME: 'github-jfrog-testing:${{ github.run_number }}'  
           
         outputs:
-          image: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+          image: ${{ vars.JF_URL }}/${{ env.PROJECT }}-docker-local/${{ env.IMAGE_NAME }}
           digest: ${{ steps.build.outputs.digest }}
         steps:
             - name: Checkout the repository    
@@ -30,13 +30,13 @@ jobs:
               uses: jfrog/setup-jfrog-cli@v4
               env: 
                 JF_URL: https://${{ vars.JF_URL }}/
-                JF_PROJECT: gadgetsnew
+                JF_PROJECT: ${{ env.PROJECT }}
               with:
                   oidc-provider-name: github-carmit-project-1
        
             - name: configure jfrog environment
               run: |
-                jf pip-config --repo-resolve=gadgetsnew-python-virtual    
+                jf pip-config --repo-resolve=${{ env.PROJECT }}-python-virtual
                 
             - name: configure environment
               run: |                      
@@ -53,7 +53,7 @@ jobs:
 
             - name: publish python package
               run: |
-                jf rt u dist/ gadgetsnew-python-virtual/example-projects/ --module=jfrog-python-example 
+                jf rt u dist/ ${{ env.PROJECT }}-python-virtual/example-projects/ --module=jfrog-python-example 
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3    
@@ -71,19 +71,19 @@ jobs:
               with:
                 push: true
                 platforms: linux/amd64, linux/arm64
-                tags: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}          
+                tags: ${{ vars.JF_URL }}/${{ env.PROJECT }}-docker-local/${{ env.IMAGE_NAME }}
 
 
             - name: docker scan
               if: false
               run: |  
-                 jf docker pull ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-                 jf docker scan ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}                               
+                jf docker pull ${{ vars.JF_URL }}/${{ env.PROJECT }}-docker-local/${{ env.IMAGE_NAME }}
+                jf docker scan ${{ vars.JF_URL }}/${{ env.PROJECT }}-docker-local/${{ env.IMAGE_NAME }}                               
 
             - name: add docker package to build
               run: |  
-                 echo "${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}" > metadata.json
-                 jf rt build-docker-create ${{ env.DOCKER_REPO }} --image-file metadata.json 
+                echo "${{ vars.JF_URL }}/${{ env.PROJECT }}-docker-local/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}" > metadata.json
+                jf rt build-docker-create ${{ env.PROJECT }}-docker-local --image-file metadata.json 
                  
             - name: publish build info
               run: |
@@ -94,6 +94,6 @@ jobs:
             - name: Attest Build Provenance
               uses: actions/attest-build-provenance@v3
               with:
-                subject-name: oci://${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
+                subject-name: oci://${{ vars.JF_URL }}/${{ env.PROJECT }}-docker-local/${{ env.IMAGE_NAME }}
                 subject-digest: ${{ steps.build.outputs.digest }}
       
