--- a/.github/workflows/test-ctoa.yml
+++ b/.github/workflows/test-ctoa.yml
@@ -11,7 +11,7 @@ jobs:
     build-publish:        
         runs-on: ubuntu-latest
         env:
-          DOCKER_REPO: 'carmit-docker-local'
+          DOCKER_REPO: 'idc-ninjas-docker-local'
           IMAGE_NAME: 'github-jfrog-testing:${{ github.run_number }}'  
           
         outputs:
@@ -26,13 +26,13 @@ jobs:
               uses: jfrog/setup-jfrog-cli@v4
               env: 
                 JF_URL: https://${{ vars.CTOA_JF_URL }}/
-                JF_PROJECT: carmit
+                JF_PROJECT: idc-ninjas
               with:
                   oidc-provider-name: github-carmit-project-1
        
             - name: configure jfrog environment
               run: |
-                jf pip-config --repo-resolve=carmit-python-virtual    
+                jf pip-config --repo-resolve=idc-ninjas-python-virtual    
                 
             - name: configure environment
               run: |                      
@@ -49,7 +49,7 @@ jobs:
 
             - name: publish python package
               run: |
-                jf rt u dist/ carmit-python-virtual/example-projects/ --module=jfrog-python-example 
+                jf rt u dist/ idc-ninjas-python-virtual/example-projects/ --module=jfrog-python-example 
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3    
