--- a/.github/workflows/test-ctoa.yml
+++ b/.github/workflows/test-ctoa.yml
@@ -11,12 +11,13 @@ jobs:
     build-publish:        
         runs-on: ubuntu-latest
         env:
-          DOCKER_REPO: 'idc-ninjas-docker-local'
+          DOCKER_REPO: 'carmit-docker-local'
           IMAGE_NAME: 'github-jfrog-testing:${{ github.run_number }}'  
           
         outputs:
-          image: ${{ vars.CTOA_JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-          digest: ${{ steps.build.outputs.digest }}
+          digest: ${{ steps.build.outputs.digest }}                          
+          rt_host: ${{ vars.CTOA_JF_URL }}
+          image: ${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
         steps:
             - name: Checkout the repository    
               uses: actions/checkout@v4
@@ -26,7 +27,7 @@ jobs:
               uses: jfrog/setup-jfrog-cli@v4
               env: 
                 JF_URL: https://${{ vars.CTOA_JF_URL }}/
-                JF_PROJECT: idc-ninjas
+                JF_PROJECT: pac-ai-generator
               with:
                   oidc-provider-name: github-carmit-project-1
        
@@ -88,8 +89,17 @@ jobs:
                 #jf build-scan  --format sarif --fail=false 
           
             - name: Attest Build Provenance
+              if: false
               uses: actions/attest-build-provenance@v3
               with:
                 subject-name: oci://${{ vars.CTOA_JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
                 subject-digest: ${{ steps.build.outputs.digest }}
       
+    call-reusable:
+        needs: build-publish 
+        uses: carmithersh/carmit-testing/.github/workflows/create_L3_attestation.yml@main 
+        with:
+            subject-name: oci://${{ needs.build.outputs.rt_host }}/${{ needs.build.outputs.image }}
+             subject-digest: ${{ needs.build.outputs.digest }}
+            oidc-provider: github-carmit-project-1
+            jfrog-platform-host: ${{ needs.build.outputs.rt_host }}
