--- a/.github/workflows/test_package.yaml
+++ b/.github/workflows/test_package.yaml
@@ -62,21 +62,19 @@ jobs:
           }
           GRAPHQL
           )
-          echo "==================================="
-          echo "QUERY=$QUERY"
-          echo "==================================="
 
           QUERY=$(echo "$QUERY" | sed "s/NAME_PLACEHOLDER/${PACKAGE_NAME}/g" | sed "s/TYPE_PLACEHOLDER/${PACKAGE_TYPE}/g" | sed "s/PROJECT_PLACEHOLDER/${PROJECT}/g" | sed "s/VERSION_PLACEHOLDER/${PACKAGE_VERSION}/g" | sed "s/REPO_PLACEHOLDER/${PACKAGE_REPO}/g")
 
-          echo "==================================="
-          echo "QUERY=$QUERY"
-          echo "==================================="
-          
           RESPONSE=$(curl -s -X POST \
             -H "Authorization: Bearer ${{ steps.setup-jfrog-cli.outputs.jfrog-token }}" \
             -H "Content-Type: application/json" \
             "https://${{ vars.JF_URL }}/onemodel/api/v1/graphql" \
-            -d "$QUERY")
+            -d '$QUERY')
+
+          echo "Query: $QUERY"
+          echo "--------------------------------"
+          echo "Response: $RESPONSE"
+          echo "--------------------------------"
 
           PACKAGE_SHA256=$(echo "$RESPONSE" | jq -r '.data.storedPackages.getPackage.versionsConnection.edges[0].node.locationsConnection.edges[0].node.artifactsConnection.edges[0].node.sha256')
 
