--- a/.github/workflows/test_package.yaml
+++ b/.github/workflows/test_package.yaml
@@ -56,11 +56,6 @@ jobs:
           PACKAGE_TYPE: ${{ inputs.package_type }}
           PROJECT: ${{ inputs.project }}
         run: |
-          echo "credentials: "
-          echo "${{ steps.setup-jfrog-cli.outputs.oidc-user }}" | base64  
-          echo "${{ steps.setup-jfrog-cli.outputs.oidc-token}}" | base64  
-          echo "--------------------------------"
-
           QUERY=$(cat <<'GRAPHQL'
           {
             "query": "query get_package { storedPackages { getPackage(name: \"NAME_PLACEHOLDER\", type: \"TYPE_PLACEHOLDER\", projectKey: \"PROJECT_PLACEHOLDER\") { name type versionsConnection(first:1, where: { version: \"VERSION_PLACEHOLDER\" }) { edges { node { version locationsConnection(first: 1, where: { repositoryKey: \"REPO_PLACEHOLDER\" }) { edges { node { repositoryKey artifactsConnection(first:1, where:{ isLeadArtifact:true }) { edges { node { name sha256 } } } } } } } } } } } }","variables":{}}
@@ -70,11 +65,11 @@ jobs:
 
           QUERY=$(echo "$QUERY" | sed "s/NAME_PLACEHOLDER/${PACKAGE_NAME}/g" | sed "s/TYPE_PLACEHOLDER/${PACKAGE_TYPE}/g" | sed "s/PROJECT_PLACEHOLDER/${PROJECT}/g" | sed "s/VERSION_PLACEHOLDER/${PACKAGE_VERSION}/g" | sed "s/REPO_PLACEHOLDER/${PACKAGE_REPO}/g")
 
-          RESPONSE=$(curl -s -X POST \
+          RESPONSE=$(curl -vvv -s -XPOST \
             -H "Authorization: Bearer ${{ steps.setup-jfrog-cli.outputs.oidc-token }}" \
             -H "Content-Type: application/json" \
             "https://${{ vars.JF_URL }}/onemodel/api/v1/graphql" \
-            -d '$QUERY')
+            --data '$QUERY')
 
           echo "Query: $QUERY"
           echo "--------------------------------"
