--- a/.github/workflows/test_package.yaml
+++ b/.github/workflows/test_package.yaml
@@ -103,9 +103,11 @@ jobs:
           echo "--------------------------------"
           echo "Response: $RESPONSE"
           echo "--------------------------------"
-          echo "$RESPONSE > evidence_response.json
+          
+          echo "$RESPONSE" > evidence_response.json
+          
           echo "--------------------------------"
-          echo "Evidence response received:           
+          echo "Evidence response received:"           
           echo "--------------------------------"
           
           
